cmake_minimum_required(VERSION 3.23)
project(Leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(Leetcode
        "code/1137. N-th Tribonacci Number.cpp"
        "code/1218. Longest Arithmetic Subsequence of Given Difference.cpp"
        "code/139. Word Break"
        "code/140. Word Break II"
        "code/153. Find Minimum in Rotated Sorted Array.cpp"
        "code/154. Find Minimum in Rotated Sorted Array II.cpp"
        "code/169. Majority Element.cpp"
        "code/222. Count Complete Tree Nodes"
        "code/2355 Maximum Number of Books You Can Take.cpp"
        "code/300. Longest Increasing Subsequence.cpp"
        "code/315. Count of Smaller Numbers After Self.cpp"
        "code/70. Climbing Stairs.cpp"
        "code/746. Min Cost Climbing Stairs.cpp"
        "code/818. Race Car"
        "code/912. Sort an Array.cpp"
        "code/96. Unique Binary Search Trees.cpp" "code/53. Maximum Subarray.cpp" code/726_Number_of_Atoms.cpp "code/856. Score of Parentheses.cpp" "code/290. Word Pattern.cpp" test.cpp test.h "code/291.Word Pattern 2.cpp")
